<resources>
    <string name="app_name">AskMe</string>
    <!-- Main menu -->

    <!-- Settings -->
    <string name="settingsTopBarText">Asetukset</string>
    <!-- ExerciseMain -->
    <string name="x">X</string>
    <string name="en1">EN1</string>
    <string name="suomi">suomi</string>
    <string name="hevonen">hevonen</string>
    <string name="englanti">englanti</string>
    <string name="tarkasta_vastaus">Tarkista</string>
    <string name="a_horse">A horse</string>
    <string name="oikein">Oikein!</string>
    <string name="kirjoita_vastauksesi_t_h_n">Kirjoita vastauksesi tähän</string>
    <string name="v_rin">Väärin</string>
    <string name="oikeita_vastauksia_x">Oikeita vastauksia X</string>
    <string name="v_ri_vastauksia_x">Vääriä vastauksia X</string>
    <string name="tulos_x">Tulos X</string>
    <string name="palaa_p_valikkoon">Palaa päävalikkoon</string>
    <string name="en_1">EN 1</string>
    <string name="lahes_oikein">Lähes oikein!</string>
    <string name="info_text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum euismod augue vel enim aliquet, eu convallis augue finibus. Integer fermentum quam sed eros laoreet, eget sodales nisl ultrices. Nunc maximus libero nec lectus ultrices aliquet. Proin convallis feugiat nunc, ac dapibus sapien dictum eu. Donec at nisl eget sem consectetur rhoncus. Sed vitae ultricies ex. Ut bibendum ultrices vestibulum. Quisque varius risus ut mi pellentesque, vel dictum magna tincidunt. Pellentesque suscipit, risus eget mollis commodo, sapien ipsum finibus erat, at commodo ex dolor vel ante. Aliquam auctor augue id erat rhoncus, nec imperdiet augue accumsan. Nullam ut mauris ac nibh suscipit tempor a id urna. Suspendisse varius diam ac gravida sollicitudin. Vivamus ullamcorper a ex vitae viverra."</string>
    <string name="englannin_ykk_skappaleen_sanoja">Englannin ykköskappaleen sanoja</string>
    <string name="sovelluksen_ovat_kehitt_neet_valtteri_ja_artturi_nse_on_megahyv_sovellus">Sovelluksen ovat kehittäneet Valtteri ja Artturi.\nSe on megahyvä sovellus!!!</string>
    <string name="progressPlaceholder">x / x</string>
    <string name="continueExercise">Jatka</string>

</resources>