<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clExerciseMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.cardview.widget.CardView
        android:id="@+id/cvTopBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/AskMeYellowGeneral"
        app:cardBackgroundColor="@color/AskMeYellowGeneral"
        app:cardElevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    tools:ignore="SpeakableTextPresentCheck"
                    android:id="@+id/btnExit"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/AskMeYellowGeneral"
                    android:drawableLeft="@drawable/close_icon"
                    android:textColor="@color/black"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/tvCourseName"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingTop="20dp"
                    android:text="@string/en1"
                    android:textColor="@color/black"
                    android:textSize="34sp"/>

                <TextView
                    android:id="@+id/tvChooseExercise"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="20dp"
                    android:paddingRight="25dp"
                    android:text="x / x"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="34sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tvTopBarDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="107dp"
                android:paddingBottom="5dp"
                android:text="@string/englannin_ykk_skappaleen_sanoja"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvFinnish"
        android:layout_width="350dp"
        android:layout_height="100dp"

        app:cardBackgroundColor="@color/AskMeFaintWhiteFinnishWord"

        app:cardCornerRadius="20dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.18"
        android:layout_marginTop="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvFinnishLanguage"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/suomi"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFinnishWord"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/hevonen"
                android:textSize="24sp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvEnglish"
        android:layout_width="350dp"
        android:layout_height="100dp"

        app:cardBackgroundColor="@color/AskMeFaintWhiteFinnishWord"

        app:cardCornerRadius="20dp"
        app:cardElevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvEnglishLanguage"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/englanti"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEnglishWord"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="10dp"
                android:hint="@string/kirjoita_vastauksesi_t_h_n"
                android:textSize="24sp"
                android:imeOptions="actionSend"
                android:inputType="text"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvRightAnswer"
        android:layout_width="350dp"
        android:layout_height="120dp"
        android:visibility="invisible"
        app:cardBackgroundColor="@color/AskMeGreenCorrectAnswer"
        app:cardCornerRadius="20dp"
        app:cardElevation="15dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvRightAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/oikein"
                android:textAlignment="center"
                android:textSize="50sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tvRightAnswerDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a_horse"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textColor="@color/white"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvNearlyCorrectAnswer"
        android:layout_width="350dp"
        android:layout_height="120dp"
        android:visibility="invisible"
        app:cardBackgroundColor="@color/AskMeNearlyCorrectAnswer"
        app:cardCornerRadius="20dp"
        app:cardElevation="15dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNearlyCorrectAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lahes_oikein"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="50sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvNearlyCorrectAnswerDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a_horse"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvWrongAnswer"
        android:layout_width="350dp"
        android:layout_height="120dp"
        android:visibility="invisible"
        app:cardBackgroundColor="@color/AskMeRedWrongAnswer"
        app:cardCornerRadius="20dp"
        app:cardElevation="15dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.62">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvWrongAnswer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/v_rin"
                android:textAlignment="center"
                android:textSize="50sp"
                android:textStyle="bold"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tvWrongAnswerDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a_horse"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textColor="@color/white"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnCheckButton"
        android:layout_width="335dp"
        android:layout_height="75dp"

        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/AskMeYellowGeneral"
        android:drawableLeft="@drawable/ok_icon"

        android:text="@string/tarkasta_vastaus"
        android:textAlignment="textStart"
        android:textColor="@color/black"


        android:textSize="24sp"
        android:visibility="visible"

        app:cornerRadius="15dp"
        app:iconPadding="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/black"
        app:strokeWidth="3dp" />

    <Button
        android:id="@+id/btnContinueButton"
        android:layout_width="335dp"
        android:layout_height="75dp"

        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/AskMeYellowGeneral"
        android:drawableEnd="@drawable/arrow_right"
        android:text="Jatka"

        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"


        android:visibility="invisible"
        app:cornerRadius="15dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/black"
        app:strokeWidth="3dp" />

</androidx.constraintlayout.widget.ConstraintLayout>