<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAskyGratz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivAskyResult"
            android:layout_width="249dp"
            android:layout_height="323dp"
            app:srcCompat="@drawable/asky_logo_gratz" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvResultBoxParent"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvAskyGratz">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvResultBox"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            app:cardBackgroundColor="@color/AskMeFaintWhiteFinnishWord"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvRightAnswerAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/oikeita_vastauksia_x"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tvNearlyCorrectAnswerAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="2dp"
                    android:text="Lähes oikein"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tvWrongAnswerAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/v_ri_vastauksia_x"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tvResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="2dp"
                    android:text="@string/tulos_x"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tvPersonalBest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="2dp"
                    android:text="Oma ennätys"
                    android:textSize="24sp"
                    android:textStyle="bold" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvButtons"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnRepeat"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:backgroundTint="@color/AskMeYellowGeneral"
                android:drawableLeft="@drawable/reset_icon"


                android:paddingLeft="32dp"
                android:text="Kertaa"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="26sp"
                app:cornerRadius="10dp"
                app:iconPadding="27dp"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/btnReverse"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:backgroundTint="@color/AskMeYellowGeneral"
                android:drawableLeft="@drawable/shuffle_icon"
                android:text="Kysy toisinpäin"


                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="26sp"
                app:cornerRadius="10dp"
                app:iconPadding="15dp"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp" />

            <Button
                android:id="@+id/btnReturn"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:backgroundTint="@color/AskMeGraySettingsButton"
                android:drawableLeft="@drawable/back_icon"
                android:text="@string/palaa_p_valikkoon"


                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="26sp"
                app:cornerRadius="10dp"
                app:strokeColor="@color/black"
                app:strokeWidth="2dp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>